fix img overflow

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
 }
 
 .logo{
-    height: 150px;
+    height: auto;
     width: 150px;
     overflow: hidden;
 }
@@ -35,6 +35,7 @@ header{
     justify-content: space-between;
     align-items: center;
     padding: 30px 10%;
+    gap: 10px;
    
 }
 
@@ -70,7 +71,7 @@ header{
 
 figure img {
     height: 250px;
-    width: auto;
+    max-width: 100%;
     margin-top: 100px;
 }
 
@@ -93,5 +94,6 @@ figcaption{
      display: block;
      background-color: #2b2c2c;
      padding: 1em;
+     width: 100%;
 
  }
